<resources>
    <string name="app_name">蒸餃計時器</string>

    <!-- Option -->
    <string name="timer">計時器</string>
    <string name="setting">設定</string>
    <string name="hint">提示</string>
    <string name="warning">注意事項</string>
    <string name="need_to_set_time_first">需先至設定頁面\n設定時間</string>
    <string name="see_inside_page_for_other_detail">其餘詳情請見內頁</string>
    <string name="there_may_be_an_error_about_2_seconds">每次計時最多會有2秒左右的誤差</string>
    <string name="toast_set_time_first">時間尚未設定</string>
    
    <!-- Timer -->
    <string name="toast_up_to_limit">已達上限</string>
    <string name="toast_no_previous_step">無上一步</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="percentage">%</string>

    <!-- Setting -->
    <string name="base_time">第一層蒸籠完全蒸熟所需總時間(時間/秒)</string>
    <string name="gap_time_1">第二層蒸籠蒸熟所需之時間差(時間/秒)</string>
    <string name="gap_time_2">第三層蒸籠蒸熟所需之時間差(時間/秒)</string>
    <string name="gap_time_3">第四層蒸籠蒸熟所需之時間差(時間/秒)</string>
    <string name="gap_time_4">第五層蒸籠蒸熟所需之時間差(時間/秒)</string>
    <string name="sound_effect_time">提示音效</string>
    <string name="Finish">完成</string>

    <string name="hint_base_time">時間/秒</string>
    <string name="hint_gap_time">間隔時間/秒</string>
    <string name="hint_sound_effect_loop_time">提示聲重複次數(設定-1為無限重播)</string>

    <string name="error_wrong_number_format">數字格式錯誤</string>
    <string name="error_wrong_time_format">時間格式錯誤</string>
    <!-- Done -->
    <string name="done">完成</string>

    <!-- Confirm Revert -->
    <string name="confirm_revert">確認返回 ?</string>
    <string name="confirm">確認</string>
</resources>