<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:adjustViewBounds="true"
            android:src="@drawable/bg_option"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:shapeAppearance="@style/CornerRounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:paddingVertical="20dp"
            android:text="@string/timer"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@id/bt_setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_setting"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="12dp"
            android:paddingVertical="20dp"
            android:text="@string/setting"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_timer" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/bt_timer"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/note_1"
                    style="?attr/materialCardViewFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="36dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="24sp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/need_to_set_time_first"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="28sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/note_2"
                    style="?attr/materialCardViewFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="36dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/note_1"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@id/note_1"
                    app:layout_constraintTop_toTopOf="@id/note_1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hint"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/see_inside_page_for_other_detail"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="28sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/note_3"
                    style="?attr/materialCardViewFilledStyle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="36dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="24sp"
                    app:layout_constraintBottom_toBottomOf="@id/note_1"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/note_2"
                    app:layout_constraintTop_toTopOf="@id/note_1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warning"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="36sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/there_may_be_an_error_about_2_seconds"
                            android:textColor="?attr/colorSecondary"
                            android:textSize="28sp" />
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>